--- a/audio.html
+++ b/audio.html
@@ -65,6 +65,12 @@
 									</audio>
 									<span class="image fit">
 										<video width="100%" height="100%" controls>
+											<source src="videos/urbNightClips.mp4" type="video/mp4">
+											Your browser does not support the video tag.
+										</video>
+									</span>
+									<span class="image fit">
+										<video width="100%" height="100%" controls>
 											<source src="videos/parkhourrorMusicVid.mp4" type="video/mp4">
 											Your browser does not support the video tag.
 										</video>
