--- a/parkhourror.html
+++ b/parkhourror.html
@@ -46,8 +46,11 @@
 											Game Trailer
 										</h2>
 									</header>
-									<span class="image fit, h_iframe">
-										<iframe src="https://drive.google.com/file/d/1wlLahZocsyNIhxCHY9r7OHfmdLpAU1oS/preview" width=100% height=100% allow="autoplay"></iframe>
+									<span class="image fit">
+										<video width="100%" height="100%" controls muted autoplay>
+											<source src="videos/urbNightTrailer.mp4" type="video/mp4">
+											Your browser does not support the video tag.
+										</video>
 									</span>
 									<br />
 									<a href="https://store.steampowered.com/app/2868260/Urban_Nightmare/" target="_blank" class="button">Steam Page</a>
@@ -65,44 +68,55 @@
 										Working on: Audio Engineer/Design, Production <br />
 										Available On: Steam and Switch (under Utah Games Presents)
 									</p>
+								<li>
 									<h2>
-										As a Audio Engineer/Designer
+										Game Clips
 									</h2>
-									<p>
-										I have filled the role as Audio Engineer/Designer. I used Cakewalk for my DAW and have messed around with a bunch of
-										different sounds and music. I spent a lot of my time on our music system blueprint. I wanted to make a system that
-										allowed the player to take however long they need in the game. Due to this, I thought one long track would be a bad route to take - I didn't want it to obviously loop. I have made
-										short 20 measure tracks that flow into each other by keeping the baseline the same. Then, my music system blueprint will pick a random track out
-										of the ones it's given to play. My prototype audio and some of music system can be seen and played below.
-										<br />
-										I was able to record the player efforts with a member of the team, and implement those into our game. I set up all of the player SFX within the animation notifies. 
-										The only exception being some looping sounds and special sounds that are being called from the cpp code.
-										<br />
-										I had a lot of fun making the music system blueprint and am still tweaking it to make it better. I used the Quartz system that Unreal has, and it has worked
-										very good for us so far.
-										<br />
-			
-									</p>
-									<h2>
-										As a Producer
-									</h2>
-									<p>
-										I am filling the role of associate producer. I have managed Jira, held and participated in standups, as well as managed
-										one of the feature teams for the project. On Jira, I have created and managed tickets for our sprints - including managing milestones
-										and epics. I have helped create our Sprint Review decks and show off our work to the rest of the cohort.
-									</p>
+									<span class="image fit">
+										<video width="100%" height="100%" controls>
+											<source src="videos/urbNightClips.mp4" type="video/mp4">
+											Your browser does not support the video tag.
+										</video>
+									</span>
+								</li>
+								<h2>
+									As an Audio Engineer/Designer
+								</h2>
+								<p>
+									I have filled the role as Audio Engineer/Designer. I used Cakewalk for my DAW and have messed around with a bunch of
+									different sounds and music. I spent a lot of my time on our music system blueprint. I wanted to make a system that
+									allowed the player to take however long they need in the game. Due to this, I thought one long track would be a bad route to take - I didn't want it to obviously loop. I have made
+									short 20 measure tracks that flow into each other by keeping the baseline the same. Then, my music system blueprint will pick a random track out
+									of the ones it's given to play. My prototype audio and some of music system can be seen and played below.
+									<br />
+									I was able to record the player efforts with a member of the team (in a creepy closet), and implement those into our game. I set up all of the player SFX within the animation notifies.
+									The only exception being some looping sounds and special sounds that are being called from the cpp code.
+									<br />
+									I had a lot of fun making the music system blueprint. I used the Quartz system that Unreal has, and it has worked
+									very well for us so far.
+									<br />
 
-									<p>
-										Here is the prototype audio I did:
-									</p>
-									<audio controls>
-										<source src="audio/protoSample1.wav" type="audio/wav">
-										Your browser does not support the audio element.
-									</audio>
-									<audio controls>
-										<source src="audio/protoSample2.wav" type="audio/wav">
-										Your browser does not support the audio element.
-									</audio>
+								</p>
+								<h2>
+									As a Producer
+								</h2>
+								<p>
+									I am filling the role of associate producer. I have managed Jira, held and participated in standups, as well as managed
+									one of the feature teams for the project. On Jira, I have created and managed tickets for our sprints - including managing milestones
+									and epics. I have helped create our Sprint Review decks and show off our work to the rest of the cohort.
+								</p>
+
+								<p>
+									Here is the prototype audio I did:
+								</p>
+								<audio controls>
+									<source src="audio/protoSample1.wav" type="audio/wav">
+									Your browser does not support the audio element.
+								</audio>
+								<audio controls>
+									<source src="audio/protoSample2.wav" type="audio/wav">
+									Your browser does not support the audio element.
+								</audio>
 								</li>
 								<li>
 									<h2>
